# VIC

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Main.cpp  opencvexample.cpp
FreenectExampleModded/: FreenectExampleModded.cpp
Libraries/OpenCV4.0.1/include/opencv2/: core.hpp  features2d.hpp
Libraries/OpenCV4.0.1/include/opencv2/core/: mat.hpp  utility.hpp
Libraries/OpenCV4.0.1/include/opencv2/flann/: dynamic_bitset.h  heap.h  lsh_index.h  lsh_table.h  nn_index.h  result_set.h
VisualEyes/: VisualEyes.h  visualeyes.cpp
src/: VIC.cpp
src/FenVIC/: FenVIC.cpp  FenVIC.h
src/FreenectExampleModded/: FreenectExampleModded.cpp  FreenectExampleModded.h
src/FreenectPlaybackWrapper/: FreenectPlaybackWrapper.cpp  FreenectPlaybackWrapper.h
src/VisuII/: VisuII.cpp  VisuII.h
src/VisuII/ImageObject/: ImageObject.cpp  ImageObject.h
src/VisualEyes/: VisualEyes.cpp  VisualEyes.h
src/VisualEyes/ImageObject/: ImageObject.cpp  ImageObject.h
